Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102083

Switching between app windows breaks IME

    XMLWordPrintable

Details

    • macOS
    • bead1894b7 (qt/qtbase/dev) bead1894b7 (qt/tqtc-qtbase/dev) be0929ba53 (qt/qtbase/6.3) be0929ba53 (qt/tqtc-qtbase/6.3) 5c1b39fdd3 (qt/tqtc-qtbase/6.2)

    Description

      To reproduce:

      • Open the Qt basiclayouts example
      • Edit main.cpp to add an extra window:

      Dialog dialog2;
      dialog2.show();

      • Run the app, and place the cursor in one of the LineEdits
      • Switch the keyboard on macOS to Japanese
      • Input some text like 'kyou', then press enter
      • Click on a line edit in the other window, then try enter text again. Observe that no text appears, and the popup window appears at the bottom left of the screen instead.

      If instead of switching to the other window directly, you first change to a different app and then back again, the problem does not appear.

      Affected version says 6.3.0beta3, but I tested with 6.3.0rc (wasn't available as an option in the dropdown)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vestbo Tor Arne Vestbø
            qtdae2 Damien Elmes
            Votes:
            2 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes